--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,34 @@
     <groupId>ru.sssmaximusss.apps</groupId>
     <artifactId>ffmpeg-redactor</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <!-- Use the latest version whenever possible. -->
+        <jackson-version>2.5.2</jackson-version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20090211</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-version}</version>
         </dependency>
 
         <dependency>
